# rust-py-web-hello

./: Cargo.toml  README.md  flake.nix  hello-rs-symlink  pyproject.toml  result
hello-py/: flake.nix
hello-rs/src/: lib.rs
hello-wasm/: flake.nix
hello-web/: flake.nix
src/: lib.rs
subflake-git/hello-py/refs/heads/: main
subflake-git/hello-wasm/refs/heads/: main
wit/: world.wit
