[project]
name = "hello-fancy"
version = "0.1.0"
description = "A fancy CLI app that greets users"
readme = "README.md"
authors = [
    { name = "Matt Rixman", email = "MatrixManAtYrService@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    # hello-py is injected by Nix overlay at build time
]
keywords = ["cli", "greeting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
hello-fancy = "hello_fancy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hello-py is provided at build time by Nix via overlay from the subflake
# Users should run `nix flake lock --update-input hello-py && uv lock` to update
# [tool.uv.sources]
# hello-py = { path = "./hello-py", editable = true }

[tool.pytest.ini_options]
# Only collect tests from the root-level tests/ directory
# Subflake tests (hello-py/tests/, etc.) are run via Nix checks
testpaths = ["tests"]
# Explicitly ignore subflake directories to avoid double-testing
norecursedirs = [
    "hello-rs",
    "hello-py",
    "hello-wasm",
    "hello-web",
    ".*",
    "build",
    "dist",
    "*.egg"
]
